# event-horyzen

./: .coverage  .flake8  README.md  README.org  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-pyqt.txt  requirements.txt
.github/: release-drafter.yml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
event_horyzen/: __init__.py  animated3Dplot.py  animated_plot.py  config.yml  event_horyzen.py  fantasy.py  main.py
tests/: __init__.py  test_event_horyzen.py
