[tool.poetry]
name = "event-horyzen"
version = "0.1.0"
description = ""
authors = ["David Wright <davecwright@knights.ucf.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PyYAML = "^6.0"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
numpy = "^1.21.5"
ipython = "^7.30.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
