[tool.poetry]
name = "event-horyzen"
version = "0.1.0"
description = "Simulates geodesic motion around black holes."
authors = ["David Wright <davecwright@knights.ucf.edu>"]
license = "GPL-3.0-only"
readme = "README.org"
homepage = "https://github.com/UCF-SPS-Research-21/event-horyzen"
repository = "https://github.com/UCF-SPS-Research-21/event-horyzen"
keywords = ["black hole", "geodesic", "simulation"]

include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PyYAML = "^6.0"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
numpy = "^1.21.5"
ipython = "^7.30.1"
h5py = "^3.6.0"
pyqtgraph = {version = "^0.12.3", optional = true}
PyOpenGL = {version = "^3.1.5", optional = true}
PyQt5 = {version = "^5.15.6", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"

[tool.poetry.extras]
pyqt = ["pyqtgraph", "PyOpenGL", "PyQt5"]

[tool.poetry.scripts]
event-horyzen = 'event_horyzen.event_horyzen:cli'
event-horyzen-plot = 'event_horyzen.animated_plot:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
