[tool.poetry]
name = "event-horyzen"
version = "0.1.2"
description = "Simulates geodesic motion around black holes."
authors = ["David Wright <davecwright@knights.ucf.edu>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/UCF-SPS-Research-21/event-horyzen"
repository = "https://github.com/UCF-SPS-Research-21/event-horyzen"
keywords = ["black hole", "geodesic", "simulation"]

include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PyYAML = "^6.0"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
numpy = "^1.21.5"
ipython = "^7.30.1"
h5py = "^3.6.0"
pyqtgraph = {version = "^0.12.3", optional = true}
PyOpenGL = {version = "^3.1.5", optional = true}
PyQt5 = {version = "^5.15.6", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
coverage = {extras = ["toml"], version = "^6.2"}
pytest-cov = "^3.0.0"
mypy = "^0.931"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^0.15.10"
sphinx-autodoc-typehints = "^1.15.3"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.extras]
pyqt = ["pyqtgraph", "PyOpenGL", "PyQt5"]

[tool.poetry.scripts]
event-horyzen = 'event_horyzen.event_horyzen:cli'
event-horyzen-plot = 'event_horyzen.animated_plot:cli'

[tool.poetry]
documentation = https://event-horyzen.readthedocs.io/en/latest/

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
